Create methods to determine if data is missing from operator report, includes old code in comments
Required me to make revisions to make_operator_meter_dataset. In this committed version, all of the old code is commented out in case I caused a bug somewhere else. Next version will be without the commented out code

--- a/01_meter_data_cleaning.ipynb
+++ b/01_meter_data_cleaning.ipynb
@@ -26,27 +26,10 @@
     "# Setup\n",
     "\n",
     "# Imports\n",
-    "import pandas as pd\n",
-    "import pathlib\n",
-    "from methods_source import make_operator_meter_dataset\n",
+    "from methods_source import load_summary_files, make_operator_meter_dataset\n",
     "\n",
     "# Load data\n",
-    "\n",
-    "# Carbon Mapper meter data\n",
-    "cm_path = pathlib.PurePath('02_meter_data', 'summary_files', 'CM.csv')\n",
-    "cm_meter_raw = pd.read_csv(cm_path)\n",
-    "\n",
-    "# GHGSat meter data\n",
-    "ghg_path = pathlib.PurePath('02_meter_data', 'summary_files', 'GHGSat.csv')\n",
-    "ghg_meter_raw = pd.read_csv(ghg_path)\n",
-    "\n",
-    "# Kairos meter data\n",
-    "kairos_path = pathlib.PurePath('02_meter_data', 'summary_files', 'Kairos.csv')\n",
-    "kairos_meter_raw = pd.read_csv(kairos_path)\n",
-    "\n",
-    "# MAIR meter data\n",
-    "mair_path = pathlib.PurePath('02_meter_data', 'summary_files', 'MAIR.csv')\n",
-    "mair_meter_raw = pd.read_csv(mair_path)"
+    "cm_meter_raw, ghg_meter_raw, kairos_meter_raw, mair_meter_raw = load_summary_files()"
    ],
    "metadata": {
     "collapsed": false
@@ -54,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# Cannot currently run Methane Air team, so removing it from the for loop for now\n",
@@ -92,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [],
    "metadata": {
