--- a/02_operator_report_cleaning.ipynb
+++ b/02_operator_report_cleaning.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# Imports\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# Carbon Mapper data cleaning\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# GHGSat Stage 1\n",
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,6 +256,7 @@
     "#### Submission details\n",
     "- Stage 1 submitted on 2022-11-17\n",
     "- Stage 2 submitted on 2022-12-20\n",
+    "- Stage 3 submitted on 2023-02-23\n",
     "- Kairos submitted data for two pods, LS23 and LS25. They analyzed the data independently, but did not report this until after testing was complete.\n",
     "\n",
     "#### QC Indicator:\n",
@@ -277,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# Kairos Stage 1\n",
@@ -327,7 +328,8 @@
     "- Kairos reported for pods LS23 and LS25\n",
     "\n",
     "#### Notes:\n",
-    "- Starting with Pod LS23\n"
+    "- First, clean reports for each pod as reported by Kairos.\n",
+    "- Next, generate a combined Kairos clean dataframe with FacilityEmissionRate equal to the average of the FacilityEmissionRate reported by both LS23 and LS25. The individual LS23 and LS25 values will be the upper and lower uncertainty\n"
    ],
    "metadata": {
     "collapsed": false
@@ -335,10 +337,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "outputs": [],
    "source": [
-    "# Kairos Data Cleaning\n",
+    "# Kairos Data Cleaning of LS23 and LS25 reports\n",
     "\n",
     "# Kairos conducted 349 overpasses\n",
     "kairos_overpass = 349\n",
@@ -371,23 +373,62 @@
    }
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [],
    "source": [
-    "# Clean Operator Data\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import pathlib\n",
+    "from methods_clean_reports import clean_kairos\n",
+    "kairos_overpass = 349\n",
+    "kairos_stage = 1\n",
     "\n",
-    "### Generate data frame with the following columns:\n",
-    "- Operator: name of operator (kairos, ghgsat, carbonmapper, scientificav)\n",
-    "- Stage: stage of unblinding (1, 2, or 3)\n",
-    "- PerformerExperimentID: Overpass number for a specific operator, incrementing by 1 for each overpass\n",
-    "- DateOfSurvey: date in YYYY-MM-DD format\n",
-    "- TimestampUTC: timestamp in UTC using 24 hour time\n",
-    "- QuantifiedPlume: boolean input, 1 indicates operator submitted a valid quantification estimate for this overpass (excludes quantification estimates that are provided but fail operator QC standards)\n",
-    "- FacilityEmissionRate: estimated emissions in kgh\n",
-    "- FacilityEmissionRateUpper: upper bound of uncertainty on quantification estimate\n",
-    "- FacilityEmissionRateLower: lower bound of uncertainty on quantification estimate\n",
-    "- UncertaintyType: type of uncertainty for upper and lower values reported above\n",
-    "- OperatorWindspeed: operator reported windspeed in m/s\n",
-    "- QCFlag: operator specific QC flag, first digits indicate operator."
+    "# Generate combined Kairos dataframe\n",
+    "# Kairos Stage 1 Pod LS23\n",
+    "ls23_path = pathlib.PurePath('01_clean_reports', f'kairos_{stage}_ls23_clean.csv')\n",
+    "ls23 = pd.read_csv(ls23_path, index_col=0)\n",
+    "\n",
+    "# Kairos Stage 1 Pod LS25\n",
+    "ls25_path = pathlib.PurePath('01_clean_reports', f'kairos_{stage}_ls25_clean.csv')\n",
+    "ls25 = pd.read_csv(ls25_path, index_col=0)\n",
+    "\n",
+    "kairos_summary = pd.DataFrame({\n",
+    "    'ls23': ls23.FacilityEmissionRate,\n",
+    "    'ls25': ls25.FacilityEmissionRate,\n",
+    "    'qc_ls23': ls23.QCFlag,\n",
+    "    'qc_ls25': ls25.QCFlag,\n",
+    "})\n",
+    "\n",
+    "kairos_summary['qc'] = np.where((kairos_summary['qc_ls23'] == 'clear') |\n",
+    "                                (kairos_summary['qc_ls25'] == 'clear'), 'clear', 'fail_both_qc')\n",
+    "\n",
+    "kairos_summary['pod_average'] = (kairos_summary.ls23 + kairos_summary.ls25)/2\n",
+    "kairos_summary['lower_bound'] = kairos_summary[['ls23', 'ls25']].min(axis=1)\n",
+    "kairos_summary['upper_bound'] = kairos_summary[['ls23', 'ls25']].max(axis=1)\n",
+    "\n",
+    "kairos_summary.to_csv(pathlib.PurePath('01_clean_reports', 'kairos_combined_data.csv'))\n",
+    "\n",
+    "\n",
+    "# Populate summary data into a new dataframe. Use Kairos raw data from LS23 Stage 1\n",
+    "\n",
+    "kairos_path = pathlib.PurePath('00_raw_reports', 'Kairos_Stage1_podLS23_submitted-2022-11-17.csv')\n",
+    "kairos_combo = pd.read_csv(kairos_path)\n",
+    "\n",
+    "# Reset the following columns to be re-populated\n",
+    "kairos_combo['FacilityEmissionRate'] = np.nan\n",
+    "kairos_combo['Kairos Flag for Dropped Passes or Uncertain Rate Quantification'] = np.nan\n",
+    "kairos_combo['OperatorKeep'] = np.nan\n",
+    "\n",
+    "# Set columns to the summary values\n",
+    "kairos_combo['FacilityEmissionRate'] = kairos_summary['pod_average']\n",
+    "kairos_combo['FacilityEmissionRateUpper'] = kairos_summary['upper_bound']\n",
+    "kairos_combo['FacilityEmissionRateLower'] = kairos_summary['lower_bound']\n",
+    "kairos_combo['Kairos Flag for Dropped Passes or Uncertain Rate Quantification'] = kairos_summary['qc']\n",
+    "kairos_combo_clean = clean_kairos(kairos_report=kairos_combo, kairos_overpasses=kairos_overpass, kairos_stage=kairos_stage)\n",
+    "\n",
+    "kairos_combo_clean.to_csv(pathlib.PurePath('01_clean_reports', 'kairos_clean.csv'))\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false
@@ -418,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "# Scientific Aviation data import\n",
