--- a/02_operator_report_cleaning.ipynb
+++ b/02_operator_report_cleaning.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Imports\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Carbon Mapper data cleaning\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# GHGSat Stage 1\n",
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Kairos Stage 1\n",
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Kairos Data Cleaning of LS23 and LS25 reports\n",
@@ -386,11 +386,11 @@
     "\n",
     "# Generate combined Kairos dataframe\n",
     "# Kairos Stage 1 Pod LS23\n",
-    "ls23_path = pathlib.PurePath('01_clean_reports', f'kairos_{stage}_ls23_clean.csv')\n",
+    "ls23_path = pathlib.PurePath('01_clean_reports', f'kairos_{kairos_stage}_ls23_clean.csv')\n",
     "ls23 = pd.read_csv(ls23_path, index_col=0)\n",
     "\n",
     "# Kairos Stage 1 Pod LS25\n",
-    "ls25_path = pathlib.PurePath('01_clean_reports', f'kairos_{stage}_ls25_clean.csv')\n",
+    "ls25_path = pathlib.PurePath('01_clean_reports', f'kairos_{kairos_stage}_ls25_clean.csv')\n",
     "ls25 = pd.read_csv(ls25_path, index_col=0)\n",
     "\n",
     "kairos_summary = pd.DataFrame({\n",
@@ -403,7 +403,22 @@
     "kairos_summary['qc'] = np.where((kairos_summary['qc_ls23'] == 'clear') |\n",
     "                                (kairos_summary['qc_ls25'] == 'clear'), 'clear', 'fail_both_qc')\n",
     "\n",
-    "kairos_summary['pod_average'] = (kairos_summary.ls23 + kairos_summary.ls25)/2\n",
+    "pod_conditions = [\n",
+    "    (kairos_summary.ls23.notnull() & kairos_summary.ls25.notnull()), # both pods report data\n",
+    "    (kairos_summary.ls23.notnull() & kairos_summary.ls25.isnull()), # LS23 reports only\n",
+    "    (kairos_summary.ls23.isnull() & kairos_summary.ls25.notnull()), # LS25 reports only\n",
+    "    (kairos_summary.ls23.isnull() & kairos_summary.ls25.isnull()), # both are null\n",
+    "]\n",
+    "\n",
+    "pod_choices = [\n",
+    "    (kairos_summary.ls23 + kairos_summary.ls25)/2,\n",
+    "    kairos_summary.ls23,\n",
+    "    kairos_summary.ls25,\n",
+    "    np.nan\n",
+    "\n",
+    "]\n",
+    "\n",
+    "kairos_summary['pod_average'] = np.select(pod_conditions, pod_choices, 'ERROR')\n",
     "kairos_summary['lower_bound'] = kairos_summary[['ls23', 'ls25']].min(axis=1)\n",
     "kairos_summary['upper_bound'] = kairos_summary[['ls23', 'ls25']].max(axis=1)\n",
     "\n",
@@ -427,8 +442,38 @@
     "kairos_combo['Kairos Flag for Dropped Passes or Uncertain Rate Quantification'] = kairos_summary['qc']\n",
     "kairos_combo_clean = clean_kairos(kairos_report=kairos_combo, kairos_overpasses=kairos_overpass, kairos_stage=kairos_stage)\n",
     "\n",
-    "kairos_combo_clean.to_csv(pathlib.PurePath('01_clean_reports', 'kairos_clean.csv'))\n",
+    "kairos_combo_clean.to_csv(pathlib.PurePath('01_clean_reports', f'kairos_{kairos_stage}_clean.csv'))\n",
     "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       True\n",
+      "1       True\n",
+      "2      False\n",
+      "3       True\n",
+      "4       True\n",
+      "       ...  \n",
+      "344     True\n",
+      "345     True\n",
+      "346     True\n",
+      "347     True\n",
+      "348     True\n",
+      "Name: ls23, Length: 349, dtype: bool\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(kairos_summary.ls23.notnull())"
    ],
    "metadata": {
     "collapsed": false
@@ -459,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Scientific Aviation data import\n",
