--- a/02_operator_report_cleaning.ipynb
+++ b/02_operator_report_cleaning.ipynb
@@ -374,106 +374,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import pathlib\n",
-    "from methods_clean_reports import clean_kairos\n",
+    "from methods_clean_reports import make_kairos_combo\n",
+    "\n",
     "kairos_overpass = 349\n",
     "kairos_stage = 1\n",
+    "kairos_1_clean = make_kairos_combo(kairos_overpass, kairos_stage)\n",
     "\n",
-    "# Generate combined Kairos dataframe\n",
-    "# Kairos Stage 1 Pod LS23\n",
-    "ls23_path = pathlib.PurePath('01_clean_reports', f'kairos_{kairos_stage}_ls23_clean.csv')\n",
-    "ls23 = pd.read_csv(ls23_path, index_col=0)\n",
+    "kairos_stage = 2\n",
+    "kairos_2_clean = make_kairos_combo(kairos_overpass, kairos_stage)\n",
     "\n",
-    "# Kairos Stage 1 Pod LS25\n",
-    "ls25_path = pathlib.PurePath('01_clean_reports', f'kairos_{kairos_stage}_ls25_clean.csv')\n",
-    "ls25 = pd.read_csv(ls25_path, index_col=0)\n",
-    "\n",
-    "kairos_summary = pd.DataFrame({\n",
-    "    'ls23': ls23.FacilityEmissionRate,\n",
-    "    'ls25': ls25.FacilityEmissionRate,\n",
-    "    'qc_ls23': ls23.QCFlag,\n",
-    "    'qc_ls25': ls25.QCFlag,\n",
-    "})\n",
-    "\n",
-    "kairos_summary['qc'] = np.where((kairos_summary['qc_ls23'] == 'clear') |\n",
-    "                                (kairos_summary['qc_ls25'] == 'clear'), 'clear', 'fail_both_qc')\n",
-    "\n",
-    "pod_conditions = [\n",
-    "    (kairos_summary.ls23.notnull() & kairos_summary.ls25.notnull()), # both pods report data\n",
-    "    (kairos_summary.ls23.notnull() & kairos_summary.ls25.isnull()), # LS23 reports only\n",
-    "    (kairos_summary.ls23.isnull() & kairos_summary.ls25.notnull()), # LS25 reports only\n",
-    "    (kairos_summary.ls23.isnull() & kairos_summary.ls25.isnull()), # both are null\n",
-    "]\n",
-    "\n",
-    "pod_choices = [\n",
-    "    (kairos_summary.ls23 + kairos_summary.ls25)/2,\n",
-    "    kairos_summary.ls23,\n",
-    "    kairos_summary.ls25,\n",
-    "    np.nan\n",
-    "\n",
-    "]\n",
-    "\n",
-    "kairos_summary['pod_average'] = np.select(pod_conditions, pod_choices, 'ERROR')\n",
-    "kairos_summary['lower_bound'] = kairos_summary[['ls23', 'ls25']].min(axis=1)\n",
-    "kairos_summary['upper_bound'] = kairos_summary[['ls23', 'ls25']].max(axis=1)\n",
-    "\n",
-    "kairos_summary.to_csv(pathlib.PurePath('01_clean_reports', 'kairos_combined_data.csv'))\n",
-    "\n",
-    "\n",
-    "# Populate summary data into a new dataframe. Use Kairos raw data from LS23 Stage 1\n",
-    "\n",
-    "kairos_path = pathlib.PurePath('00_raw_reports', 'Kairos_Stage1_podLS23_submitted-2022-11-17.csv')\n",
-    "kairos_combo = pd.read_csv(kairos_path)\n",
-    "\n",
-    "# Reset the following columns to be re-populated\n",
-    "kairos_combo['FacilityEmissionRate'] = np.nan\n",
-    "kairos_combo['Kairos Flag for Dropped Passes or Uncertain Rate Quantification'] = np.nan\n",
-    "kairos_combo['OperatorKeep'] = np.nan\n",
-    "\n",
-    "# Set columns to the summary values\n",
-    "kairos_combo['FacilityEmissionRate'] = kairos_summary['pod_average']\n",
-    "kairos_combo['FacilityEmissionRateUpper'] = kairos_summary['upper_bound']\n",
-    "kairos_combo['FacilityEmissionRateLower'] = kairos_summary['lower_bound']\n",
-    "kairos_combo['Kairos Flag for Dropped Passes or Uncertain Rate Quantification'] = kairos_summary['qc']\n",
-    "kairos_combo_clean = clean_kairos(kairos_report=kairos_combo, kairos_overpasses=kairos_overpass, kairos_stage=kairos_stage)\n",
-    "\n",
-    "kairos_combo_clean.to_csv(pathlib.PurePath('01_clean_reports', f'kairos_{kairos_stage}_clean.csv'))\n",
-    "\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0       True\n",
-      "1       True\n",
-      "2      False\n",
-      "3       True\n",
-      "4       True\n",
-      "       ...  \n",
-      "344     True\n",
-      "345     True\n",
-      "346     True\n",
-      "347     True\n",
-      "348     True\n",
-      "Name: ls23, Length: 349, dtype: bool\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(kairos_summary.ls23.notnull())"
+    "kairos_stage = 3\n",
+    "kairos_3_clean = make_kairos_combo(kairos_overpass, kairos_stage)"
    ],
    "metadata": {
     "collapsed": false
