Run parity plot for Kairos data
Next: need to debug probability of detection plot

--- a/03_summarize_results.ipynb
+++ b/03_summarize_results.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "# Setup\n",
@@ -55,11 +55,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# List all operators\n",
-    "operators = ['Carbon Mapper', 'GHGSat', 'Kairos LS23', 'Kairos LS25', 'Methane Air']\n",
+    "operators = ['Carbon Mapper', 'GHGSat', 'Kairos', 'Kairos LS23', 'Kairos LS25', 'Methane Air']\n",
     "stages = [1, 2, 3]\n",
     "\n",
     "# Strict discard:\n",
@@ -68,7 +68,7 @@
     "# Load clean operator data\n",
     "# format for naming: [operator]_stage\n",
     "\n",
-    "cm_1, cm_2, cm_3, ghg_1, ghg_2, ghg_3, kairos_ls23_1, kairos_ls25_1, kairos_ls23_2, kairos_ls25_2, kairos_ls23_3, kairos_ls25_3 = load_clean_operator_reports()\n",
+    "cm_1, cm_2, cm_3, ghg_1, ghg_2, ghg_3, kairos_1, kairos_2, kairos_3, kairos_ls23_1, kairos_ls25_1, kairos_ls23_2, kairos_ls25_2, kairos_ls23_3, kairos_ls25_3 = load_clean_operator_reports()\n",
     "\n",
     "report_dictionary = {\n",
     "    'cm_1': cm_1,\n",
@@ -77,6 +77,9 @@
     "    'ghg_1': ghg_1,\n",
     "    'ghg_2': ghg_2,\n",
     "    'ghg_3': ghg_2,\n",
+    "    'kairos_1': kairos_1,\n",
+    "    'kairos_2': kairos_2,\n",
+    "    'kairos_3': kairos_3,\n",
     "    'kairos_ls23_1': kairos_ls23_1,\n",
     "    'kairos_ls25_1': kairos_ls25_1,\n",
     "    'kairos_ls23_2': kairos_ls23_2,\n",
