Debugged Kairos Combo dataset and generated probability of detection plot

--- a/02_operator_report_cleaning.ipynb
+++ b/02_operator_report_cleaning.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "# Imports\n",
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# Kairos Stage 1\n",
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# Kairos Data Cleaning of LS23 and LS25 reports\n",
@@ -374,8 +374,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ls23           float64\n",
+      "ls25           float64\n",
+      "qc_ls23         object\n",
+      "qc_ls25         object\n",
+      "qc              object\n",
+      "pod_average    float64\n",
+      "lower_bound    float64\n",
+      "upper_bound    float64\n",
+      "dtype: object\n",
+      "ls23           float64\n",
+      "ls25           float64\n",
+      "qc_ls23         object\n",
+      "qc_ls25         object\n",
+      "qc              object\n",
+      "pod_average    float64\n",
+      "lower_bound    float64\n",
+      "upper_bound    float64\n",
+      "dtype: object\n",
+      "ls23           float64\n",
+      "ls25           float64\n",
+      "qc_ls23         object\n",
+      "qc_ls25         object\n",
+      "qc              object\n",
+      "pod_average    float64\n",
+      "lower_bound    float64\n",
+      "upper_bound    float64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
