--- a/testing_code.ipynb
+++ b/testing_code.ipynb
@@ -488,6 +488,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([0. , 1.5, 3. ])"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "n_operators = 3\n",
+    "np.linspace(0, n_operators, num = n_operators)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
