Initial parity plot for SciAv
Manually made the sciav_overpasses file because it was too much of a pain to code for so few data points

--- a/01_meter_data_cleaning.ipynb
+++ b/01_meter_data_cleaning.ipynb
@@ -20,16 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "# Setup\n",
     "\n",
     "# Imports\n",
-    "from methods_source import load_summary_files, make_operator_meter_dataset\n",
-    "\n",
-    "# Load data\n",
-    "cm_meter_raw, ghg_meter_raw, kairos_meter_raw, mair_meter_raw = load_summary_files()"
+    "from methods_source import load_summary_files, make_operator_meter_dataset\n"
    ],
    "metadata": {
     "collapsed": false
@@ -37,10 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "outputs": [],
    "source": [
-    "# Cannot currently run Methane Air team, so removing it from the for loop for now\n",
+    "# Load data\n",
+    "cm_meter_raw, ghg_meter_raw, kairos_meter_raw, mair_meter_raw, sciav_meter_raw = load_summary_files()\n",
     "\n",
     "timekeepers = ['flightradar', 'stanford', 'team']\n",
     "operators = ['Carbon Mapper', 'GHGSat', 'Kairos', 'MethaneAir']\n",
@@ -51,12 +49,15 @@
     "    'GHGSat': ghg_meter_raw,\n",
     "    'Kairos': kairos_meter_raw,\n",
     "    'MethaneAir': mair_meter_raw,\n",
+    "    'Scientific Aviation': sciav_meter_raw,\n",
     "}\n",
     "\n",
     "# Generate all datasets and save them\n",
     "for timekeeper in timekeepers:\n",
     "    for operator in operators:\n",
-    "        if operator == 'MethaneAir': #TODO: Add MAIR data here\n",
+    "        if operator == 'Scientific Aviation':\n",
+    "            pass # insert function specific for cleaning sciav data\n",
+    "        elif operator == 'MethaneAir': #TODO: Add MAIR data here\n",
     "            pass\n",
     "        else:\n",
     "            make_operator_meter_dataset(operator, meter_raw[operator], timekeeper)\n",
@@ -75,7 +76,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "start_using_sciav                                 datetime64[ns]\nend_using_sciav                                   datetime64[ns]\naverage_meters_reading_kgh_using_sciav                   float64\nstart_using_flightradar                           datetime64[ns]\nend_using_flightradar                             datetime64[ns]\naverage_meters_reading_kgh_using_flightradar             float64\nstart_using_release_times                         datetime64[ns]\nend_using_release_times                           datetime64[ns]\naverage_meters_reading_kgh_using_release_times           float64\ndtype: object"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sciav_meter_raw.dtypes"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import pathlib\n",
+    "\n",
+    "# For Scientific Aviation, we'll use their start and end times reported by operator as this is a more accurate reflection of when they were conducting measurements\n",
+    "\n",
+    "sciav_meter = pd.DataFrame()\n",
+    "overpass_id = np.linspace(1, 18, 18)\n",
+    "sciav_meter['overpass_id'] = overpass_id\n",
+    "# datetime column set to start time to keep column heading consistent with how we handle the other operator dataframes\n",
+    "sciav_meter['datetime_utc'] = sciav_meter_raw['start_using_sciav']\n",
+    "# Create a new column specifically for measurement start and end times\n",
+    "sciav_meter['start_measurement'] = sciav_meter_raw['start_using_sciav']\n",
+    "sciav_meter['start_measurement'] = sciav_meter_raw['end_using_sciav']\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "outputs": [],
    "source": [],
    "metadata": {
