--- a/02_operator_report_cleaning.ipynb
+++ b/02_operator_report_cleaning.ipynb
@@ -9,13 +9,10 @@
     "Date last edited: 2022-02-23\n",
     "\n",
     "### Notes\n",
-    "- Currently, this calls and cleans data for Stage 1 for Carbon Mapper, GHGSat, and Kairos LS23 pod\n",
-    "- Takes operator reports as input from 00_raw_data. No changes were made to operator reported results\n",
-    "\n",
-    "### To Do:\n",
-    "- Change code so that cleaning each data file is a function that takes a the spreadsheet as input. This way, I can run the function on Stage 1, 2, 3 data and not copy huge chunks of code with only minor changes to syntax along the way\n",
-    "- Consider: do I want to combine all the output clean data into one massive dataframe, which I then filter as needed downstream?\n",
-    "- Need to add Scientific Aviation"
+    "For Carbon Mapper, GHGSat, Kairos, and Methane Air data reports:\n",
+    "- This notebook loads the raw excel file submitted by the team. It applies a team-specific function to clean the report. Output is a standardized report that will be used to generate overpass summaries in 03_summarize_results.\n",
+    "- All raw report inputs are saved in 00_raw_data. No changes are manually made to operator reports. All cleaning is handled in Python.\n",
+    "-\n"
    ],
    "metadata": {
     "collapsed": false
@@ -251,7 +248,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Kairos Stage 1 and 2 data\n",
+    "### Kairos Stage data: individual pods (LS23 and LS25)\n",
     "\n",
     "#### Submission details\n",
     "- Stage 1 submitted on 2022-11-17\n",
@@ -313,7 +310,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Clean Kairos Data\n",
+    "### Clean Kairos Data: reports for individual pods\n",
     "\n",
     "#### Required Data Cleaning:\n",
     "QC Flag:\n",
@@ -367,6 +364,20 @@
     "kairos_2_ls25_clean.to_csv(pathlib.PurePath('01_clean_reports', 'kairos_2_ls25_clean.csv'))\n",
     "kairos_3_ls23_clean.to_csv(pathlib.PurePath('01_clean_reports', 'kairos_3_ls23_clean.csv'))\n",
     "kairos_3_ls25_clean.to_csv(pathlib.PurePath('01_clean_reports', 'kairos_3_ls25_clean.csv'))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Generate combined notebook\n",
+    "- Because Kairos reported results as individual pods, we combine these results in the main manuscript. This script generates the combined clean report.\n",
+    "- Combined report averages the values found by both pods for FacilityEmissionRate\n",
+    "- FacilityEmissionRateUpper and FacilityEmissionRateLower are set to the individual values of the pods themselves\n",
+    "- If one pod detects a release and the other does not, we use the value of the pod that detected the release\n",
+    "- Similarly, if one pod experiences a QC issue but the other does not, we use the value by the pod that reports values (ie did not have a QC problem)."
    ],
    "metadata": {
     "collapsed": false
@@ -447,7 +458,25 @@
     "- \"* same as above\" (referring to powerline problem)\n",
     "- \"*too few laps\"\n",
     "- \"*too few laps; upwind interference from landfill\"\n",
-    "- \"*not enough of plume captured near surface\""
+    "- \"*not enough of plume captured near surface\"\n",
+    "\n",
+    "#### Generating clean report\n",
+    "Scientific Aviation did not submit a report using the Stanford provided template. Because formatting of the excel file is not readily machine-readable, Sahar El Abbadi manual generated the clean version of the data. Because Scientific Aviation uses a different measurement approach, the following columns are used in generating the clean dataframe:\n",
+    "- Operator\n",
+    "- Stage\n",
+    "- overpass_id\n",
+    "- DateOfSurvey\n",
+    "- StartUTC\n",
+    "- EndUTC\n",
+    "- Detected\n",
+    "- QuantifiedPlume\n",
+    "- FacilityEmissionRate\n",
+    "- FacilityEmissionRateUpper\n",
+    "- FacilityEmissionRateLower\n",
+    "- UncertaintyType\n",
+    "- OperatorWindspeed\n",
+    "- QCFlag\n",
+    "- OperatorKeep"
    ],
    "metadata": {
     "collapsed": false
@@ -455,14 +484,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "# Scientific Aviation data import\n",
     "\n",
     "sciav_path = pathlib.PurePath('00_raw_reports', 'SciAv_Stage1_submitted-2023-02-21.xlsx')\n",
-    "sciav_1 = pd.read_excel(sciav_path)"
+    "sciav_1 = pd.read_excel(sciav_path)\n",
+    "\n",
+    "sciav_clean_path = pathlib.PurePath('01_clean_reports', 'sciav_1_clean.csv')\n",
+    "sciav_1_clean = pd.read_csv(sciav_clean_path)"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
