--- a/03_summarize_results.ipynb
+++ b/03_summarize_results.ipynb
@@ -68,7 +68,7 @@
     "# Load clean operator data\n",
     "# format for naming: [operator]_stage\n",
     "\n",
-    "cm_1, cm_2, cm_3, ghg_1, ghg_2, ghg_3, kairos_1, kairos_2, kairos_3, kairos_ls23_1, kairos_ls25_1, kairos_ls23_2, kairos_ls25_2, kairos_ls23_3, kairos_ls25_3 = load_clean_operator_reports()\n",
+    "cm_1, cm_2, cm_3, ghg_1, ghg_2, ghg_3, kairos_1, kairos_2, kairos_3, kairos_ls23_1, kairos_ls25_1, kairos_ls23_2, kairos_ls25_2, kairos_ls23_3, kairos_ls25_3, sciav_1 = load_clean_operator_reports()\n",
     "\n",
     "report_dictionary = {\n",
     "    'cm_1': cm_1,\n",
@@ -86,6 +86,7 @@
     "    'kairos_ls25_2': kairos_ls25_2,\n",
     "    'kairos_ls23_3': kairos_ls23_3,\n",
     "    'kairos_ls25_3': kairos_ls25_3,\n",
+    "    'sciav_1': sciav_1\n",
     "}\n",
     "\n",
     "# Load meter data\n",
@@ -195,7 +196,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of GHGSat detects that pass QC with non-strict Stanford QC: 115\n"
+      "Number of GHGSat detects that pass QC with non-strict Stanford QC: 122\n"
      ]
     }
    ],
@@ -227,7 +228,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of GHGSat detects that pass QC with strict Stanford QC: 99\n"
+      "Number of GHGSat detects that pass QC with strict Stanford QC: 105\n"
      ]
     }
    ],
