Add note that I manually maid overpass summary for SciAv

--- a/03_summarize_results.ipynb
+++ b/03_summarize_results.ipynb
@@ -47,7 +47,9 @@
     "- operator_quantification: operator's quantification estimate as reported in operator report\n",
     "- operator_lower: lower bound on operator's lower bound quantification estimate\n",
     "- operator_upper: upper bound on operator's quantification estimate\n",
-    "- qc_summary: summarizes results of both operator and Stanford QC. Must be one of the following: 'pass_all', 'fail_stanford', 'fail_operator', 'fail_all'"
+    "- qc_summary: summarizes results of both operator and Stanford QC. Must be one of the following: 'pass_all', 'fail_stanford', 'fail_operator', 'fail_all'\n",
+    "\n",
+    "Note: due to the small number of data points for Scientific Aviation and the fact that they did not submit using a template, sciav_1_overpasses.csv was manually constructed by Sahar El Abbadi on 2023-03-16."
    ],
    "metadata": {
     "collapsed": false
