Correct dates last edited

--- a/03_summarize_results.ipynb
+++ b/03_summarize_results.ipynb
@@ -6,21 +6,7 @@
     "# Summarize datasets for all operator results\n",
     "Code author: Sahar H. El Abbadi\n",
     "Date started: 2023-03-13\n",
-    "Date last edited: 2023-03-13"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [],
-   "source": [
-    "# Setup\n",
-    "\n",
-    "# imports\n",
-    "from methods_source import generate_all_overpass_reports\n"
+    "Date last edited: 2023-03-17"
    ],
    "metadata": {
     "collapsed": false
@@ -60,6 +46,9 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
+    "# Imports\n",
+    "from methods_source import generate_all_overpass_reports\n",
+    "\n",
     "generate_all_overpass_reports(strict_discard = False, timekeeper = 'flightradar')\n",
     "generate_all_overpass_reports(strict_discard = True, timekeeper = 'flightradar')"
    ],
