Check length of overpasses compared to max overpass_id for all overpass summary files

--- a/03_summarize_results.ipynb
+++ b/03_summarize_results.ipynb
@@ -55,6 +55,147 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Sanity checks on data\n",
+    "\n",
+    "Basic double checks on the data to make sure everything looks good"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "##### Number of overpasses\n",
+    "\n",
+    "Check that the length of the dataframe matches the highest overpass ID. This will flag the potential for missing or duplicate data in the summary file. Doing this check as we previously observed duplicate rows in the meter summary file."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The length of the Carbon Mapper overpasses dataframe (121) matches the highest value for overpass_id (121).\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check Carbon Mapper\n",
+    "\n",
+    "from methods_source import load_overpass_summary, check_overpass_number\n",
+    "\n",
+    "cm_overpasses = load_overpass_summary(operator='Carbon Mapper', stage=1, strict_discard=False)\n",
+    "cm_max_id = cm_overpasses.max()['overpass_id']\n",
+    "cm_overpasses_length = len(cm_overpasses)\n",
+    "check_overpass_number(operator='Carbon Mapper', max_overpass_id=cm_max_id, overpasses_length=cm_overpasses_length)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The maximum GHGSat overpass ID is less than the length of the overpass dataframe. Check for duplicate values in summary data.\n",
+      "Length of GHGSat overpasses dataframe: 198\n",
+      "Highest GHGSat overpass_id: 192\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check GHGSat\n",
+    "\n",
+    "from methods_source import load_overpass_summary, check_overpass_number\n",
+    "\n",
+    "ghg_overpasses = load_overpass_summary(operator='GHGSat', stage=1, strict_discard=False)\n",
+    "ghg_max_id = ghg_overpasses.max()['overpass_id']\n",
+    "ghg_overpasses_length = len(ghg_overpasses)\n",
+    "check_overpass_number(operator='GHGSat', max_overpass_id=ghg_max_id, overpasses_length=ghg_overpasses_length)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The length of the Kairos overpasses dataframe (349) matches the highest value for overpass_id (349).\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check Kairos\n",
+    "\n",
+    "from methods_source import load_overpass_summary, check_overpass_number\n",
+    "\n",
+    "kairos_overpasses = load_overpass_summary(operator='Kairos', stage=1, strict_discard=False)\n",
+    "kairos_max_id = kairos_overpasses.max()['overpass_id']\n",
+    "kairos_overpasses_length = len(kairos_overpasses)\n",
+    "check_overpass_number(operator='Kairos', max_overpass_id=kairos_max_id, overpasses_length=kairos_overpasses_length)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The length of the Scientific Aviation overpasses dataframe (18) matches the highest value for overpass_id (18).\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check Scientific Aviation\n",
+    "\n",
+    "from methods_source import load_overpass_summary, check_overpass_number\n",
+    "\n",
+    "sciav_overpasses = load_overpass_summary(operator='Scientific Aviation', stage=1, strict_discard=False)\n",
+    "sciav_max_id = sciav_overpasses.max()['overpass_id']\n",
+    "sciav_overpasses_length = len(sciav_overpasses)\n",
+    "check_overpass_number(operator='Scientific Aviation', max_overpass_id=sciav_max_id, overpasses_length=sciav_overpasses_length)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Check Methane Air\n",
+    "\n",
+    "#TODO check Methane Air"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
