--- a/08_release_histogram.ipynb
+++ b/08_release_histogram.ipynb
@@ -433,7 +433,6 @@
     "    zeros_count = zeros_count + zeros_dict[op_ab]\n",
     "\n",
     "zeros_summary = pd.DataFrame(zeros_dict)\n",
-    "#TODO: NEXT, compare this with loading operator overpass summary and counting \"zero_release = True\" and adding any missing zero data. Make sure I get the same numbers for both\n",
     "\n",
     "percent_zero = zeros_count / total_releases * 100\n",
     "print(f'Total number of zeroes conducted in the entire experiment is: {zeros_count.loc[0]:0.0f}, making up {percent_zero.loc[0]:0.2f}% of all releases.')\n",
@@ -445,6 +444,17 @@
     "print(f'- Methane Air:  {zeros_summary.mair[0]:0.0f}')\n",
     "\n",
     "#TODO add MAIR zeroes to summary"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "##### Double Check Zero Calculations\n",
+    "\n",
+    "Compare the zero releases calculated above with values obtained from loading operator overpass summary dataset and counting the number releases not equal to zero."
    ],
    "metadata": {
     "collapsed": false
