Calculate average flight height

--- a/03_summarize_results.ipynb
+++ b/03_summarize_results.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "# Imports\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -186,13 +186,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "# Check Methane Air\n",
     "\n",
     "#TODO check Methane Air"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "##### Calculate average flight altitude across all reported overpasses\n",
+    "\n",
+    "Use \"altitude_feet\" column in overpass summary files"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average overpass altitude (feet) across all reported overpasses:\n",
+      "\n",
+      "Carbon Mapper: 11,749.1 ft\n",
+      "GHGSat: 8,003.4 ft\n",
+      "Kairos: 2,758.8 ft\n"
+     ]
+    }
+   ],
+   "source": [
+    "from methods_source import load_overpass_summary\n",
+    "\n",
+    "cm_overpasses = load_overpass_summary(operator='Carbon Mapper', stage=1, strict_discard=False)\n",
+    "ghg_overpasses = load_overpass_summary(operator='GHGSat', stage=1, strict_discard=False)\n",
+    "kairos_overpasses = load_overpass_summary(operator='Kairos', stage=1, strict_discard=False)\n",
+    "cm_altitude = cm_overpasses.altitude_feet.mean()\n",
+    "ghg_altitude = ghg_overpasses.altitude_feet.mean()\n",
+    "kairos_altitude = kairos_overpasses.altitude_feet.mean()\n",
+    "#TODO add MAIR\n",
+    "print('Average overpass altitude (feet) across all reported overpasses:\\n')\n",
+    "print(f'Carbon Mapper: {cm_altitude:,.1f} ft')\n",
+    "print(f'GHGSat: {ghg_altitude:,.1f} ft')\n",
+    "print(f'Kairos: {kairos_altitude:,.1f} ft')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "##### Calculate average flight for each day of testing\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Carbon Mapper average daily altitude:\n",
+      "\n",
+      "           altitude_feet\n",
+      "2022-10-10 11,779.6 feet\n",
+      "2022-10-11 11,734.4 feet\n",
+      "2022-10-12 11,626.3 feet\n",
+      "2022-10-28 11,589.9 feet\n",
+      "2022-10-29 11,780.9 feet\n",
+      "2022-10-31 11,927.3 feet\n"
+     ]
+    }
+   ],
+   "source": [
+    "from methods_source import calc_daily_altitude\n",
+    "operator = 'Carbon Mapper'\n",
+    "cm_alt = calc_daily_altitude(operator)\n",
+    "print(f'{operator} average daily altitude:\\n')\n",
+    "print(cm_alt.to_string(formatters={'altitude_feet':'{:,.1f} feet'.format}))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GHGSat average daily altitude:\n",
+      "\n",
+      "           altitude_feet\n",
+      "2022-10-31  7,972.6 feet\n",
+      "2022-11-02  7,983.6 feet\n",
+      "2022-11-04  7,983.0 feet\n",
+      "2022-11-07  8,101.5 feet\n"
+     ]
+    }
+   ],
+   "source": [
+    "operator = 'GHGSat'\n",
+    "ghg_alt = calc_daily_altitude(operator)\n",
+    "print(f'{operator} average daily altitude:\\n')\n",
+    "print(ghg_alt.to_string(formatters={'altitude_feet':'{:,.1f} feet'.format}))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kairos average daily altitude:\n",
+      "\n",
+      "           altitude_feet\n",
+      "2022-10-24  2,741.9 feet\n",
+      "2022-10-25  2,725.4 feet\n",
+      "2022-10-26  2,736.3 feet\n",
+      "2022-10-27  2,796.8 feet\n",
+      "2022-10-28  2,793.1 feet\n"
+     ]
+    }
+   ],
+   "source": [
+    "operator = 'Kairos'\n",
+    "kairos_alt = calc_daily_altitude(operator)\n",
+    "print(f'{operator} average daily altitude:\\n')\n",
+    "print(kairos_alt.to_string(formatters={'altitude_feet':'{:,.1f} feet'.format}))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
