--- a/07_qc_comparison.ipynb
+++ b/07_qc_comparison.ipynb
@@ -30,12 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Setup\n",
-    "import numpy as np\n",
+    "import pathlib\n",
     "import pandas as pd\n",
     "\n",
     "# Imports\n",
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -355,10 +355,10 @@
      "output_type": "stream",
      "text": [
       "Table of percent error: \n",
-      "                  strict        lax  lax_not_strict\n",
-      "Carbon Mapper  55.798816  57.857667       92.343412\n",
-      "GHGSat         35.432117  35.480669       35.777692\n",
-      "Kairos         42.992349  45.823618       64.934682\n"
+      "               strict    lax  lax_not_strict\n",
+      "Carbon Mapper  55.80% 57.86%          92.34%\n",
+      "GHGSat         35.43% 35.48%          35.78%\n",
+      "Kairos         42.99% 45.82%          64.93%\n"
      ]
     }
    ],
@@ -366,8 +366,9 @@
     "op_index = ['Carbon Mapper', 'GHGSat', 'Kairos']\n",
     "error_dictionaries = [cm_error_profile, ghg_error_profile, kairos_error_profile]\n",
     "error_summary = pd.DataFrame.from_records(error_dictionaries, index=op_index)\n",
+    "error_summary.to_csv(pathlib.PurePath('03_results', 'overpass_error', 'percent_error_summary.csv'))\n",
     "print('Table of percent error: ')\n",
-    "print(error_summary)"
+    "print(error_summary.to_string(float_format='{:.2f}%'.format))"
    ]
   },
   {
@@ -382,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -391,9 +392,9 @@
      "text": [
       "Table of p-values from t-test comparison: \n",
       "               strict_v_lax  strict_v_lax_not_strict\n",
-      "Carbon Mapper      0.894094                 0.436606\n",
-      "GHGSat             0.991919                 0.970825\n",
-      "Kairos             0.632674                 0.073653\n"
+      "Carbon Mapper         0.894                    0.437\n",
+      "GHGSat                0.992                    0.971\n",
+      "Kairos                0.633                    0.074\n"
      ]
     }
    ],
@@ -401,8 +402,9 @@
     "op_index = ['Carbon Mapper', 'GHGSat', 'Kairos']\n",
     "p_dictionaries = [cm_p_values, ghg_p_values, kairos_p_values]\n",
     "error_summary = pd.DataFrame.from_records(p_dictionaries, index=op_index)\n",
+    "error_summary.to_csv(pathlib.PurePath('03_results', 'overpass_error', 't-test_results.csv'))\n",
     "print('Table of p-values from t-test comparison: ')\n",
-    "print(error_summary)"
+    "print(error_summary.to_string(float_format='{:.3f}'.format))"
    ]
   },
   {
